[gd_scene load_steps=4 format=3 uid="uid://cf0kj6qn7a40s"]

[ext_resource type="Script" path="res://src/ui/city_map_screen.gd" id="1_umri8"]
[ext_resource type="Shader" path="res://src/ui/blinking.gdshader" id="2_8njr4"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_8sbij"]
shader = ExtResource("2_8njr4")
shader_parameter/min_alpha = 0.35
shader_parameter/max_alpha = 1.0
shader_parameter/speed = 2.5

[node name="CityMapScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_umri8")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.95)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
visible = false
layout_mode = 2
theme_type_variation = &"TitleLabel"
text = "City Map"
horizontal_alignment = 1

[node name="MapLabel" type="RichTextLabel" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
fit_content = true

[node name="PointerLabel" type="Label" parent="VBoxContainer/MapLabel"]
unique_name_in_owner = true
visible = false
material = SubResource("ShaderMaterial_8sbij")
layout_mode = 1
offset_right = 60.0
offset_bottom = 88.0
theme_type_variation = &"EmojiGraphics"
theme_override_constants/line_spacing = 0
theme_override_font_sizes/font_size = 64
text = "â˜›"
vertical_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/MapLabel"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -116.0
offset_top = -92.0
grow_horizontal = 0
grow_vertical = 0
size_flags_horizontal = 8

[node name="BackButton" type="Button" parent="VBoxContainer/MapLabel/MarginContainer"]
layout_mode = 2
text = "Back"

[connection signal="button_up" from="VBoxContainer/MapLabel/MarginContainer/BackButton" to="." method="_on_back_button_pressed"]
